--- a/form.html
+++ b/form.html
@@ -2,258 +2,182 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Formulario de Entrenamiento con Evaluación</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <title>Evaluación de Registro</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 900px;
-      margin: 40px auto;
-      background: white;
-      padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    h2, h3 {
-      text-align: center;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-    label {
-      font-weight: bold;
-    }
-    input, select {
-      padding: 8px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      width: 100%;
-    }
-    .btn {
-      padding: 10px;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 16px;
-      margin-top: 10px;
-    }
-    .btn:hover {
-      background: #0056b3;
-    }
-    #login {
-      max-width: 400px;
-      margin: 100px auto;
-      text-align: center;
-      background: white;
-      padding: 30px;
-      border-radius: 8px;
-    }
-    .timer {
-      text-align: center;
-      font-size: 18px;
-      margin-bottom: 20px;
-      display: none;
+      padding: 20px;
+      background-color: #f4f4f4;
     }
     fieldset {
+      margin-bottom: 20px;
       border: 1px solid #ccc;
-      border-radius: 5px;
       padding: 15px;
+      background-color: #fff;
     }
     legend {
       font-weight: bold;
-      font-size: 16px;
       padding: 0 10px;
     }
-    #resultado {
-      text-align: center;
-      font-size: 20px;
-      color: green;
+    label {
+      display: block;
       margin-top: 10px;
+    }
+    input {
+      width: 100%;
+      padding: 8px;
+      margin-top: 4px;
+    }
+    #result {
+      margin-top: 20px;
+      font-weight: bold;
+    }
+    .hidden {
+      display: none;
     }
   </style>
 </head>
 <body>
+  <h1>Formulario de Registro</h1>
 
-<div id="login">
-  <h3>Ingrese la contraseña para acceder</h3>
-  <input type="password" id="password" placeholder="Contraseña">
-  <br><br>
-  <button class="btn" onclick="verificarPassword()">Entrar</button>
-  <p id="error" style="color:red; display:none;">Contraseña incorrecta</p>
-</div>
+  <!-- BLOQUE DE LOGIN -->
+  <div id="login">
+    <label>Contraseña de acceso:
+      <input type="password" id="passwordInput">
+    </label>
+    <button onclick="validarPassword()">Ingresar</button>
+  </div>
 
-<div class="container" id="formulario" style="display:none;">
-  <h2>Formulario de Entrenamiento</h2>
-  <div class="timer" id="timer-container">Tiempo transcurrido: <span id="cronometro">00:00:00</span></div>
-  <form id="form">
-    <fieldset>
-      <legend>Datos personales</legend>
-      <label>Nombre de usuario:</label><input name="nombre" required>
-      <label>Apellido paterno:</label><input name="paterno" required>
-      <label>Apellido materno:</label><input name="materno">
-      <label>Fecha de nacimiento:</label><input type="date" name="fechaNacimiento" required>
-      <label>Nacionalidad:</label>
-      <select name="nacionalidad" required>
-        <option value="">Seleccione</option>
-        <option>Mexicana</option>
-        <option>Estadounidense</option>
-        <option>Colombiana</option>
-      </select>
-    </fieldset>
+  <!-- FORMULARIO PRINCIPAL -->
+  <div id="formularioContainer" class="hidden">
+    <p>Tiempo transcurrido: <span id="cronometro">00:00:00</span></p>
+    <form id="registroForm">
+      <fieldset>
+        <legend>Datos Personales</legend>
+        <label>Nombre de usuario: <input type="text" name="nombre"></label>
+        <label>Apellido paterno: <input type="text" name="paterno"></label>
+        <label>Apellido materno: <input type="text" name="materno"></label>
+        <label>Fecha de nacimiento: <input type="date" name="fechaNacimiento"></label>
+        <label>Nacionalidad: <input type="text" name="nacionalidad"></label>
+      </fieldset>
 
-    <fieldset>
-      <legend>Identificación oficial</legend>
-      <label>Tipo de ID oficial:</label>
-      <select name="tipoID" required>
-        <option value="">Seleccione</option>
-        <option>INE</option>
-        <option>Licencia</option>
-        <option>Pasaporte</option>
-        <option>Residencia</option>
-      </select>
-      <label>Número de identificación:</label><input name="numeroID" required>
-      <label>Vigencia de la identificación:</label><input type="date" name="vigenciaID" required>
-    </fieldset>
+      <fieldset>
+        <legend>Identificación</legend>
+        <label>Tipo de ID: <input type="text" name="tipoID"></label>
+        <label>Número de identificación: <input type="text" name="numeroID"></label>
+        <label>Vigencia de ID: <input type="date" name="vigenciaID"></label>
+        <label>País de nacimiento: <input type="text" name="paisNacimiento"></label>
+      </fieldset>
 
-    <fieldset>
-      <legend>Lugar de nacimiento</legend>
-      <label>País de nacimiento:</label><input name="paisNacimiento" required>
-    </fieldset>
+      <fieldset>
+        <legend>Domicilio</legend>
+        <label>Calle: <input type="text" name="calle"></label>
+        <label>Número exterior: <input type="text" name="numExt"></label>
+        <label>Número interior: <input type="text" name="numInt"></label>
+        <label>Código postal: <input type="text" name="cp"></label>
+        <label>Colonia: <input type="text" name="colonia"></label>
+        <label>Ciudad: <input type="text" name="ciudad"></label>
+        <label>Municipio: <input type="text" name="municipio"></label>
+        <label>Estado: <input type="text" name="estado"></label>
+        <label>País: <input type="text" name="pais"></label>
+        <label>Localidad: <input type="text" name="localidad"></label>
+      </fieldset>
 
-    <fieldset>
-      <legend>Domicilio actual</legend>
-      <label>Calle, avenida o vía:</label><input name="calle" required>
-      <label>Número exterior:</label><input name="numExt" required>
-      <label>Número interior:</label><input name="numInt">
-      <label>Código postal:</label><input name="cp" required>
-      <label>Colonia:</label><input name="colonia" required>
-      <label>Ciudad o población:</label><input name="ciudad" required>
-      <label>Municipio o alcaldía:</label><input name="municipio" required>
-      <label>Estado:</label>
-      <select name="estado" required>
-        <option value="">Seleccione</option>
-        <option>CDMX</option>
-        <option>Jalisco</option>
-        <option>Yucatán</option>
-      </select>
-      <label>País:</label><input name="pais" required>
-      <label>Localidad:</label><input name="localidad">
-    </fieldset>
+      <button type="button" onclick="evaluarFormulario()">Finalizar y Generar PDF</button>
+    </form>
+    <p id="result"></p>
+  </div>
 
-    <button class="btn" type="submit">Evaluar y Generar PDF</button>
-  </form>
+  <!-- SCRIPT PRINCIPAL -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script>
+    let cronometro = 0;
+    let intervalo;
 
-  <div id="resultado"></div>
-</div>
+    // Respuestas correctas para evaluación
+    const respuestasCorrectas = {
+      nombre: "Andrea",
+      paterno: "Martínez",
+      materno: "López",
+      fechaNacimiento: "1997-05-12",
+      nacionalidad: "Mexicana",
+      tipoID: "Pasaporte",
+      numeroID: "X12345678",
+      vigenciaID: "2030-08-31",
+      paisNacimiento: "México",
+      calle: "Av. Reforma",
+      numExt: "101",
+      numInt: "2B",
+      cp: "06030",
+      colonia: "Juárez",
+      ciudad: "Ciudad de México",
+      municipio: "Cuauhtémoc",
+      estado: "CDMX",
+      pais: "México",
+      localidad: "Centro"
+    };
 
-<script>
-  let segundos = 0;
-  let intervalo;
-
-  function verificarPassword() {
-    const clave = document.getElementById('password').value;
-    if (clave === 'entreno123') {
-      document.getElementById('login').style.display = 'none';
-      document.getElementById('formulario').style.display = 'block';
-      document.getElementById('timer-container').style.display = 'block';
-      iniciarCronometro();
-    } else {
-      document.getElementById('error').style.display = 'block';
-    }
-  }
-
-  function iniciarCronometro() {
-    const cronometro = document.getElementById('cronometro');
-    intervalo = setInterval(() => {
-      segundos++;
-      const h = Math.floor(segundos / 3600);
-      const m = Math.floor((segundos % 3600) / 60);
-      const s = segundos % 60;
-      cronometro.textContent = `${pad(h)}:${pad(m)}:${pad(s)}`;
-    }, 1000);
-  }
-
-  function pad(n) {
-    return n < 10 ? '0' + n : n;
-  }
-
-  // RESPUESTAS CORRECTAS Y PUNTAJE
-  const respuestasCorrectas = {
-    nombre: "Juan",
-    paterno: "Pérez",
-    nacionalidad: "Mexicana",
-    tipoID: "INE"
-  };
-  const puntajePorCampo = 10;
-
-  document.getElementById('form').addEventListener('submit', function(e) {
-    e.preventDefault();
-    clearInterval(intervalo);
-
-    const formData = new FormData(this);
-    const tiempo = document.getElementById('cronometro').textContent;
-    const fechaActual = new Date();
-    const fechaStr = fechaActual.toLocaleDateString();
-    const horaStr = fechaActual.toLocaleTimeString();
-
-    let nombrePDF = prompt("Ingrese el nombre del aspirante para el archivo PDF:");
-    if (!nombrePDF) nombrePDF = "aspirante";
-
-    // Evaluación
-    let puntaje = 0;
-    for (const campo in respuestasCorrectas) {
-      if ((formData.get(campo) || "").trim().toLowerCase() === respuestasCorrectas[campo].trim().toLowerCase()) {
-        puntaje += puntajePorCampo;
+    function validarPassword() {
+      const pwd = document.getElementById('passwordInput').value;
+      if (pwd === "evaluar123") {
+        document.getElementById("login").classList.add("hidden");
+        document.getElementById("formularioContainer").classList.remove("hidden");
+        iniciarCronometro();
+      } else {
+        alert("Contraseña incorrecta");
       }
     }
 
-    document.getElementById('resultado').textContent = `Puntaje obtenido: ${puntaje}`;
-
-    // Generar PDF
-    const { jsPDF } = window.jspdf;
-    const doc = new jsPDF();
-    let y = 20;
-
-    doc.setFontSize(16);
-    doc.text("Formulario de Entrenamiento", 20, y);
-    y += 10;
-    doc.setFontSize(12);
-    doc.text(`Fecha: ${fechaStr}   Hora: ${horaStr}   Tiempo: ${tiempo}`, 20, y);
-    y += 10;
-    doc.text(`Puntaje obtenido: ${puntaje}`, 20, y);
-    y += 10;
-
-    doc.setLineWidth(0.5);
-    doc.line(20, y, 190, y);
-    y += 10;
-
-    for (const [campo, valor] of formData.entries()) {
-      doc.text(`${formatearCampo(campo)}: ${valor}`, 20, y);
-      y += 8;
-      if (y > 270) {
-        doc.addPage();
-        y = 20;
-      }
+    function iniciarCronometro() {
+      const cronElem = document.getElementById("cronometro");
+      intervalo = setInterval(() => {
+        cronometro++;
+        let h = String(Math.floor(cronometro / 3600)).padStart(2, '0');
+        let m = String(Math.floor((cronometro % 3600) / 60)).padStart(2, '0');
+        let s = String(cronometro % 60).padStart(2, '0');
+        cronElem.textContent = \`\${h}:\${m}:\${s}\`;
+      }, 1000);
     }
 
-    doc.save(`${nombrePDF}_${fechaActual.toISOString().slice(0,10)}.pdf`);
-  });
+    async function evaluarFormulario() {
+      clearInterval(intervalo);
+      const form = document.getElementById("registroForm");
+      const data = new FormData(form);
+      let puntaje = 0;
+      let totalCampos = 0;
 
-  function formatearCampo(texto) {
-    return texto
-      .replace(/([A-Z])/g, ' $1')
-      .replace(/^./, str => str.toUpperCase());
-  }
-</script>
+      for (let campo in respuestasCorrectas) {
+        totalCampos++;
+        const valor = data.get(campo)?.trim().toLowerCase();
+        const esperado = respuestasCorrectas[campo].trim().toLowerCase();
+        if (valor === esperado) puntaje++;
+      }
 
+      document.getElementById("result").textContent = \`Puntaje obtenido: \${puntaje} / \${totalCampos}\`;
+
+      const nombre = prompt("Ingresa el nombre del aspirante para el PDF:");
+      if (nombre) {
+        const { jsPDF } = window.jspdf;
+        const doc = new jsPDF();
+        doc.setFontSize(12);
+        doc.text(\`Aspirante: \${nombre}\`, 10, 10);
+        doc.text(\`Fecha y hora: \${new Date().toLocaleString()}\`, 10, 20);
+        doc.text(\`Tiempo transcurrido: \${document.getElementById("cronometro").textContent}\`, 10, 30);
+        doc.text(\`Puntaje: \${puntaje} / \${totalCampos}\`, 10, 40);
+
+        let y = 50;
+        for (let [campo, valor] of data.entries()) {
+          doc.text(\`\${campo}: \${valor}\`, 10, y);
+          y += 10;
+          if (y > 280) {
+            doc.addPage();
+            y = 10;
+          }
+        }
+
+        doc.save(\`\${nombre}_evaluacion.pdf\`);
+      }
+    }
+  </script>
 </body>
 </html>
